--- a/resources.qrc
+++ b/resources.qrc
@@ -2,5 +2,7 @@
     <qresource prefix="/resources">
         <file>src/fshader1.fsh</file>
         <file>src/vshader1.vsh</file>
+        <file>textures/earthmap1024x512.jpg</file>
+        <file>textures/xclock.png</file>
     </qresource>
 </RCC>
